# alita

./: CMakeLists.txt
cli/: cli.cpp
src/: alita_service.pb.cc  alita_service.pb.h  alita_service.proto  column.h  engine.cpp  engine.h  flow.cpp  flow.h  frame.cpp  frame.h  generator.h  main.cpp  node.h  object.h  operator.h  options.h  record.h  runtime.cpp  runtime.h  service.cpp  service.h  table.h  tablebase.h  view.h
